v3.5.1 (XXXX-XX-XX)
-------------------

* Fixed internal issue #4378: fix bug in MoveShard::abort which causes a
  duplicate entry in the follower list.

* Fixed cut'n'pasting code from the documentation into arangosh.

* Fixed issue #9652: fix ArangoSearch wrong name collision and raising
  "Name collision detected" error during creation of a custom analyzer with
  stopwords.

* Fixed an agency bug found in Windows tests.

* Added initial support for wgs84 reference ellipsoid in GEO_DISTANCE through
  third optional parameter to AQL function.

* Added support for area calculations with GEO_AREA AQL function.

* Correct RocksDB statistics to report sums from column families instead of
  single value from default column family.

* Fixed agency nodes to not create bogus keys on delete / observe / unobserve.

* Fixed issue #9660: fix multiple plans processing during optimization of AQL
  query which uses ArangoSearch scorers.

* Fixed issue #9679: improved error message for FULLTEXT function invocation
  failures.

* Fixed error message "Invalid argument: assume_tracked is set but it is not
  tracked yet" when trying to write to the same keys in concurrent RocksDB
  transactions. This error will now be reported as a "Lock timeout" error,
  with error code 1200.

* Added resign leadership job to supervision.

* Hide MMFiles-specific information in web UI (in detail view of a collection)
  when the storage engine is not MMFiles or when the information is not
  available.

* Keep followers in sync if the old leader resigned and stopped writes.

* Abort a FailedLeader job when its _to_ server fails.

* Decreased unnecessary wait times for agency callbacks in case they were
  called earlier than expected by main thread.

* Make arangosh not close the connection after the user aborts an operation.
  This restores the same behavior as in previous versions of ArangoDB, which
  also left the connection open.
